packages/kotlin/ttrp-frontend/src/test/resources/corpus/ttr-pandas/accept/ssa-rebind.ttrp
container c(in x, out result) target polars """pandas
x = x.filter(amount > 0)
x.sort(by: amount).limit(10)
"""
