packages/kotlin/ttrp-frontend/src/test/resources/corpus/ttr-pandas/reject/TTRP-PD-003.ttrp
// expect: TTRP-PD-003
container c target polars """pandas
x.to_sql(db)
"""
